# blockchain_mini

./: Cargo.toml  README.md
.VSCodeCounter/2023-10-10_11-03-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-10-25_17-53-35/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-10-31_17-55-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-11-06_10-17-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
docs/research/: Consensus.md  Devp2p.md  Discv4.md  ECDSA.md  Reth_of_paradigm.md  broadcastMechanism.md  chooseHashFunc.md  network.md  rust-libp2p.md  storage.md  structureDesign.md  tokennomics.md  tx_life_time.md  txpoolDesign.md
src/: main.rs
src/Account/: account.rs
src/Blockchain/: blockchain.rs
src/Miner/: miner.rs  mod.rs
src/TransactionPool/: mod.rs  transactionpool.rs
src/VM/: mod.rs  transactionExecute.rs
src/Validation/: mod.rs  transactionValidation.rs
src/block/: Block.rs
src/blockchain/: Blockchain.rs
src/crates/Utility/: Cargo.toml
src/crates/Utility/src/: lib.rs  utility.rs
src/elementals/: address.rs  block.rs  head.rs  mod.rs  node.rs  peerid.rs  transaction.rs
src/networking/: discv.rs  discv4.rs  mod.rs
src/test/: mod.rs  test_node.rs
