[package]
name = "blockchain_prague"
version = "1.56.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.27.0",features = ["rand-std","bitcoin-hashes-std"]}
serde = "1.0.173"
primitive-types = "0.12.1"


